--- a/Pic_gallery/Index.html
+++ b/Pic_gallery/Index.html
@@ -13,7 +13,7 @@
         <div class="main-menu">
           <nav class="main">
             <a href="#" class="ser 1">My galleryyyy</a>
-            <a href="#" class="ser 2">Sketch'ssss</a>
+            <a href="#" class="ser 2">Sketch'ssssss</a>
             <a href="#" class="ser 3">Videos</a>
             <a href="#" class="ser 4">Pay to draw</a>
             <a href="#" class="ser 5">FAQ</a>
