--- a/Pic_gallery/Index.html
+++ b/Pic_gallery/Index.html
@@ -12,7 +12,7 @@
       <body>
         <div class="main-menu">
           <nav class="main">
-            <a href="#" class="ser 1">My gallery</a>
+            <a href="#" class="ser 1">My galleeeeery</a>
             <a href="#" class="ser 2">Sketch's</a>
             <a href="#" class="ser 3">Videos</a>
             <a href="#" class="ser 4">Pay to draw</a>
