--- a/Pic_gallery/Index.html
+++ b/Pic_gallery/Index.html
@@ -12,7 +12,7 @@
       <body>
         <div class="main-menu">
           <nav class="main">
-            <a href="#" class="ser 1">My galleeeeery</a>
+            <a href="#" class="ser 1">My gallery</a>
             <a href="#" class="ser 2">Sketch's</a>
             <a href="#" class="ser 3">Videos</a>
             <a href="#" class="ser 4">Pay to draw</a>
@@ -26,7 +26,7 @@
 
               <a href="#" class="register">Register</a>
             </p>
-          </div>
+          </div>    
         </div>
 
         <!--
@@ -37,17 +37,17 @@
         <button class="but5">option5</button>
       </nav>
       --->
-        <!--
+        <!-- 
       <div class="arrows">
         <a href="#" class="previous round">&#8249;</a>
         <a href="#" class="next round">&#8250;</a>
       </div>
-      -->
-
-        <div class="images">
-          <div class="arrows">
-            <a href="#" class="previous round" height="30">&#8249;</a>
-          </div>
+    -->
+    
+    <div class="images">
+      <div class="arrows">
+        <a href="#" class="previous round" height="30">&#8249;</a>
+      </div>
           <div class="img">
             <img src="Images/face.jpg" alt="My test image" width="200" />
           </div>
@@ -65,12 +65,19 @@
             <a href="#" class="next round">&#8250;</a>
           </div>
         </div>
+        <div class="dots">
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+
+        </div>
         <!--
-        <div class="first_par">
+          <div class="first_par">
           <p>
-            u can see the progression on most of my drawings from scetch to
+            u can see the progresssion on most of my drawings from scetch to
             masterpiece
 
+          
             <a href="#" class="here-link">Here</a>
           </p>
         </div>
